@@ -382,6 +382,7 @@
       <class name="test.dataprovider.DataProviderAsTest" />
       <class name="test.dataprovider.TestInstanceFactory" />
       <class name="test.dataprovider.FailedDataProviderTest" />
+      <class name="test.dataprovider.InstanceDataProviderTest" />
     </classes>
   </test>
 	
